@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+8-Oct-2010 Christophe Demko
+ # [#22759] Add version, date, author to Hathor (from Tracker # 22482) (thanks Andrea Tarr)
+
 6-Oct-2010 Ron Severdia
  ^ Updated Blueprint to 1.0 in Atomic (Thanks Christian Montoya)
  
